<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background_user_edit"
    tools:context="com.hanks.healthspy.user.UserEditActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/background_login_div">

        <TextView
            android:id="@+id/nickname_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nickname_edit"
            android:textColor="@color/bg_black"
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"/>

        <EditText
            android:id="@+id/nickname_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nickname_edit_in"
            android:ems="10"
            android:layout_below="@+id/nickname_tv"
            android:textColorHint="@color/text_gray"
            android:textColor="@color/bg_black"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"/>

        <TextView
            android:id="@+id/gender_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender_edit"
            android:textColor="@color/bg_black"
            android:textSize="20dp"
            android:layout_below="@+id/nickname_edit"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"/>

        <Switch
            android:id="@+id/gender_edit"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:textOff="男"
            android:textOn="女"
            android:layout_below="@+id/gender_tv"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:id="@+id/age_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/age_edit"
            android:textColor="@color/bg_black"
            android:textSize="20dp"
            android:layout_below="@+id/gender_edit"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"/>

        <EditText
            android:id="@+id/age_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/age_edit_in"
            android:ems="10"
            android:layout_below="@+id/age_tv"
            android:textColorHint="@color/text_gray"
            android:text=""
            android:textColor="@color/bg_black"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"/>

        <TextView
            android:id="@+id/phone_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_edit"
            android:textColor="@color/bg_black"
            android:textSize="20dp"
            android:layout_below="@+id/age_edit"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"/>

        <EditText
            android:id="@+id/phone_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/phone_edit_in"
            android:ems="10"
            android:layout_below="@+id/phone_tv"
            android:textColorHint="@color/text_gray"
            android:textColor="@color/bg_black"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"/>

        <Button
            android:id="@+id/cancel"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="取  消"
            android:background="@drawable/btn_shape_sign_out"
            android:textSize="20dp"
            android:onClick="cancel"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/user_upload"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="上  传"
            android:background="@drawable/btn_shape_sign_in"
            android:textSize="20dp"
            android:onClick="user_upload"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

</RelativeLayout>
