<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_user_top_div">

        <ImageView
            android:id="@+id/user_imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/user"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/user_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nickname"
            android:textSize="30dp"
            android:layout_below="@+id/user_imageView"
            android:layout_marginBottom="5dp"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_topbar">

        <TextView
            android:id="@+id/nickname_txt"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:text="@string/nickname"
            android:textColor="@color/bg_black"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/nickname"
            android:textColor="@color/text_gray"
            android:textSize="20dp"
            android:layout_above="@+id/view"
            android:layout_alignLeft="@+id/gender"
            android:layout_alignStart="@+id/gender" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#FF909090"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/nickname_txt"
            android:id="@+id/view" />

        <TextView
            android:id="@+id/gender_txt"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_below="@+id/nickname_txt"
            android:layout_marginTop="30dp"
            android:text="@string/gender"
            android:textColor="@color/bg_black"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textColor="@color/text_gray"
            android:textSize="20dp"
            android:layout_above="@+id/view2"
            android:layout_alignLeft="@+id/age"
            android:layout_alignStart="@+id/age" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#FF909090"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/gender_txt"
            android:id="@+id/view2" />

        <TextView
            android:id="@+id/age_txt"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_below="@+id/gender_txt"
            android:layout_marginTop="30dp"
            android:text="@string/age"
            android:textColor="@color/bg_black"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/gender_txt"
            android:layout_marginTop="30dp"
            android:text="@string/age"
            android:textColor="@color/text_gray"
            android:textSize="20dp"
            android:layout_alignLeft="@+id/phone"
            android:layout_alignStart="@+id/phone" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#FF909090"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/age_txt" />

        <TextView
            android:id="@+id/phone_txt"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_below="@+id/age_txt"
            android:layout_marginTop="30dp"
            android:text="@string/user_phone"
            android:textColor="@color/bg_black"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/age_txt"
            android:layout_marginTop="30dp"
            android:text="@string/user_phone"
            android:textColor="@color/text_gray"
            android:textSize="20dp"/>

        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/user_change"
            android:id="@+id/user_change_btn"
            android:background="@drawable/btn_shape_sign_in"
            android:textSize="20dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:onClick="user_change"/>

        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_out"
            android:id="@+id/sign_out_btn"
            android:background="@drawable/btn_shape_sign_out"
            android:textSize="20dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="20dp"
            android:onClick="sign_out"/>


    </RelativeLayout>

</LinearLayout>